# peTI-NESulator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.txt  sonar-project.properties
data/: bad_apple_2.nes  trollburner_demo.nes
doc/: Changements.txt  Changes.txt  LisezMoi.txt  TODO.txt
src/: CMakeLists.txt  NESCarts.c  log.c  main.c  paddle.c
src/apu/: CMakeLists.txt  SndAlleg.c  SndUnixT.c  Sound.c  apu.c
src/corecpu/: CMakeLists.txt  Codes.h  Debug.c  M6502.c  M6502.h  Tables.h  corecpu.c
src/include/: MIDIFreq.h  NESCarts.h  Sound.h  color.h  corecpu.h  log.h  os_dependent.h  paddle.h  palette.h  text.h  types.h
src/include/apu/: apu.h
src/include/mappers/: manager.h
src/include/memory/: manager.h
src/include/plugins/: manager.h
src/include/ppu/: ppu.debug.h  ppu.h  ppu.memory.h
src/mappersmanager/: CMakeLists.txt  manager.c  mappers_list.h  utils.c
src/mappersmanager/mappers/: aorom.c  aorom.h  cnrom.c  cnrom.h  genericmapper.c  genericmapper.c.template  iremh3001.c  iremh3001.h  mmc1.c  mmc1.h  mmc3.c  mmc3.h  mmc4.c  mmc4.h  norom.c  norom.h  unrom.c  unrom.h  unrom512.c  unrom512.h
src/mappersmanager/mappers/temp/: aorom.c  genericmapper.c  mmc3.c  unrom.c
src/mappersmanager/unused/: aorom.h  cnrom.h  genericmapper.h  iremh3001.h  mmc1.h  mmc3.h  mmc4.h  unrom.h
src/memorymanager/: CMakeLists.txt  memory.c
src/os/32blit/: CMakeLists.txt  graphics.c  io.c  loadfile.c
src/os/macos/: CMakeLists.txt  graphics.c  io.c  loadfile.c
src/os/ti68k/: CMakeLists.txt  loadfile.c  main.c
src/os/unix/: CMakeLists.txt  graphics.c  graphics_dummy.c  io.c  loadfile.c  text.c
src/os/win32/: CMakeLists.txt  graphics.c  io.c  loadfile.c
src/pluginsmanager/: CMakeLists.txt  manager.c  plugins_list.h
src/pluginsmanager/plugins/: gamegenie.c  gamegenie.h
src/ppu/: CMakeLists.txt  oldppu.c  ppu.24.c  ppu.c  ppu.memory.c  ppu.new.c  ppu.new2.c  ppu.old.c
src/ppu/debug/: ppu.debug.c  tmp.c.txt
src/utils/: sendromdata.py
src/utils/bin2h/: bin2h.c
ti68k/: Makefile
unix/: Makefile
